--- a/test/unit_tests/html/res/values/strings.xml
+++ b/test/unit_tests/html/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright 2015 Google Inc. All rights reserved.
+<!-- Copyright 2016 Google Inc. All rights reserved.
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -14,5 +14,5 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <resources>
-    <string name="app_name">flatui sample</string>
+    <string name="app_name">flatui html test</string>
 </resources>
